tests/errors/test_03.xpp
// Identifier redeclared

fn foo(bar: i32) void {
	let bar = false;
}

fn main() void {
	let x = 1;
	let x = 1;
}
